AMP-10015 checked for bugs in internet explorer and fix footer alignment
git-svn-id: file:///svn/branches/AMP_2_0_RELEASE@15119 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp.css
@@ -267,7 +267,10 @@ html.ie div.header {overflow:visible;}
     font-size: 11px;
     margin-top: 25px;
     padding-bottom: 10px;
+	width:100%;
     padding-top: 10px;
+	text-align:center;
+	
 }
 .dialog {display:none;}
 
